--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 atomicwrites==1.4.0
 attrs==20.1.0
 autopep8==1.5.4
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+idna==2.10
 iniconfig==1.0.1
 joblib==0.16.0
 more-itertools==8.5.0
@@ -14,6 +17,8 @@ pycodestyle==2.6.0
 pyparsing==2.4.7
 pytest==6.0.1
 regex==2020.7.14
+requests==2.24.0
 six==1.15.0
 toml==0.10.1
 tqdm==4.48.2
+urllib3==1.25.10
